# AnimationProject

./: CMakeLists.txt  README.md  a.out  main.cpp  test.cpp
raytracer/: CMakeLists.txt
raytracer/include/: Camera.h  Color.h  Cone.h  Cylinder.h  FastNoise.h  Light.h  Matrix.h  Matrix4x4.h  Object.h  Plane.h  Pyramid.h  Ray.h  Raytracer.h  Rectangle.h  Source.h  Sphere.h  Triangle.h  TriangleMesh.h  Vect.h  bmp.h
raytracer/src/: Camera.cpp  Color.cpp  Cone.cpp  Cylinder.cpp  FastNoise.cpp  Light.cpp  Matrix.cpp  Matrix4x4.cpp  Object.cpp  Plane.cpp  Pyramid.cpp  Ray.cpp  Raytracer.cpp  Rectangle.cpp  Source.cpp  Sphere.cpp  Triangle.cpp  TriangleMesh.cpp  Vect.cpp  bmp.cpp
